--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "nodemon": "^2.0.6"
   },
   "devDependencies": {
-    "email-validator": "^2.0.4",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
-    "html-validate": "^3.0.0",
-    "recursive-readdir": "^2.2.2",
+    "email-validator": "^2.0.4",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-cypress": "^2.11.1",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.0",
+    "html-validate": "^3.0.0",
+    "recursive-readdir": "^2.2.2"
   }
 }
