--- a/package.json
+++ b/package.json
@@ -10,24 +10,22 @@
   "engines": {
     "node": "13.x"
   },
-  "author": "Joseph Kim",
+  "author": "Ye Sung Kim",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.6",
-    "cors": "^2.8.4",
-    "csurf": "^1.9.0"
-  },
-  "devDependencies": {
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.4",
+    "recursive-readdir": "^2.2.2"
+  },
+  "devDependencies": {
     "email-validator": "^2.0.4",
+    "html-validate": "^3.0.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-cypress": "^2.11.1",
-    "eslint-plugin-import": "^2.22.0",
-    "html-validate": "^3.0.0",
-    "recursive-readdir": "^2.2.2"
+    "eslint-plugin-import": "^2.22.0"
   }
 }
